k8s/production-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tree-quest-backend
spec:
  replicas: 1
  selector:
      matchLabels:
        app: tree-quest-backend
  template:
    metadata:
      labels:
        app: tree-quest-backend
    spec:
      serviceAccount: tree-quest-service-account
      containers:
      - name: tree-quest
        image: registry.hub.docker.com/victorsens/tree-quest
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: "2048Mi"
            cpu: "100m"
        imagePullPolicy: Always
        readinessProbe:
            httpGet:
                path: /actuator/health
                port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
