k8s/production-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tree-guest
  labels:
    app: tree-guest
    service: tree-guest
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: tree-guest
