k8s/production-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pro-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: victorsens-ip-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: tree-quest-service
              servicePort: 80
